# HomeWorkBasic-10-2

./: CMakeLists.txt
HomeWorkBasic-10-2/: CMakeLists.txt  HomeWorkBasic-10-2.cpp  HomeWorkBasic-10-2.h  RightTriangle.cpp
